SRGB_EXT is a valid format of texture in WebGL1.0 and ES2.0 contexts.

BUG=602544
TestCase= /conformance/extensions/ext-sRGB.html
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/1881883002
Cr-Commit-Position: refs/heads/master@{#392296}

Former-commit-id: 60cce09ca802ba394b12dbcf0dd4728d7125df24